--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -53,6 +53,9 @@ permissions:
             coreprotect.status: true
             coreprotect.consumer: true
             coreprotect.networking: true
+            coreprotect.custom.container: true
+            coreprotect.custom.item: true
+            coreprotect.custom.kill: true
     coreprotect.co:
         description: Has permission to access the CoreProtect /co command
         default: true
